--- a/bank-atm-interface/src/app/globals.css
+++ b/bank-atm-interface/src/app/globals.css
@@ -19,9 +19,9 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
   min-height: 100vh;
-  min-height: 100dvh;
+  height: 100%;
 }
 
 body {
